# Wood_Stacker

backend/: CMakeLists.txt
backend/build_new/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  optimizer_server.vcxproj  optimizer_server.vcxproj.filters  slab_optimizer_server.sln
backend/build_new/optimizer_server.dir/Debug/: optimizer_server.exe.recipe
backend/build_new/optimizer_server.dir/Debug/optimizer_server.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  optimizer_server.lastbuildstate
backend/build_new/optimizer_server.dir/Release/: optimizer_server.exe.recipe
backend/build_new/optimizer_server.dir/Release/optimizer_server.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  optimizer_server.lastbuildstate
backend/build_new/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
backend/build_new/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
backend/build_new/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
backend/build_new/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
backend/build_new/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
backend/data/: kitchen.csv
backend/include/: optimizer.h  parser.h
backend/src/: main.cpp  optimizer.cpp  parser.cpp  server.cpp
frontend/: canvas_mapper.js  index.html  style.css
(+2 files in other folders)
